feat: add documentation for book enpoints
